--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Студія</title>
 </head>
 <body>
+    
     <header>
         <nav>
             <a href="./index.html">WebStudio</a>
@@ -16,14 +17,18 @@
                 <li><a href="#contact_data">Контакти</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info&#64;devstudio.com</a>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
+
     <main>
+        <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">
             Замовити послугу
         </button>
+        </section>
+
         <section>
             <!--цей заголовок буде прихованим-->
             <h2>Особливості студії</h2>
@@ -116,9 +121,9 @@
     <footer>
         <a href="./index.html">WebStudio</a>
         <address id="contact_data">
-            м. Київ, пр-т Лесі Українки, 26<br>
-            info&#64;devstudio.com<br>
-            +38 096 111 11 11
+            м. Київ, пр-т Лесі Українки, 26
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
     </footer>  
 </body>
